<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SolenoidSet" Id="{c0450522-fb26-4722-8a4c-9b7935364899}">
    <Declaration><![CDATA[TYPE ST_SolenoidSet :
STRUCT
	
	bSolenoidA 		: BOOL;  // Solenoid Valve A
    bSolenoidB 		: BOOL;  // Solenoid Valve B 
    bSolenoidC 		: BOOL;  // Solenoid Valve C 
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>