<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SystemConfig" Id="{ab980bb8-679a-4d09-a630-fbcc6a566680}">
    <Declaration><![CDATA[TYPE ST_SystemConfig :
STRUCT
	
	rPressureThreshold 			: REAL;  							// Pressure threshold [psi] 
    tMonitoringTime 			: TIME;     						// Monitoring time for leak test 
    aSolenoidSets 				: ST_SolenoidSet;				  	// Solenoid valve assemblies 
	
	MotorM1_TargetPosition 		: LREAL;   						    // Target position for M1 Motor
    MotorM1_Velocity 			: LREAL;         					// Motor speed M1 in mm/s
    MotorM1_Acceleration 		: LREAL;    						// Acceleration of motor M1 in mm/s²
    MotorM1_Deceleration 		: LREAL;    						// Deceleration of motor M1 in mm/s²
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>